--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="legendItem Commercial">Commercial Building</div>
         <div class="legendItem Mixed-Use">Mixed Use Building</div>
       </div>
-      <h1>New Buildings with Office Space</h1>
+      <h1>New Buildings </br> with Office Space</h1>
       <p>This map shows newly constructed buildings with office space in the South Bronx</p>
       <p>Click on the points to find the building address and year it was built</p>
 
